server/src/main/assets/stylesheets/main.less
/* ... */
.pcp-pax-summary.b1 .queues .queue div {
  background-color: #7E8588;
}

.pcp-pax-summary.b2 .queues .queue div {
  background-color: #CCCDCF;
}

.pcp-pax-summary.b3 .queues .queue div {
  background-color: #FAFAFB;
}

.queue-pax {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  gap: 0px;
}

.arrivals_table__splits__queue-pax {
  min-width: 60px;
  text-align: right;
  margin-bottom: 8px;
}

// Usage table

.usage-table {
  min-height: 1px;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  td, th {
    line-height: 1.4;
    vertical-align: top;
  }
}

// cell types
.usage-table__prop {
  color: #266d90;
  font-family: @font-family-monospace;
  font-size: 90%;
}

.usage-table__type,
.usage-table__default {
  color: @gray-light;
  font-family: @font-family-monospace;
  font-size: 90%;
}

.usage-table__type {
  color: #bf2a5c;
}

.usage-table__description {
  min-width: 200px;
}

.terminal-desk-recs-container {
  height: 800px;
}

table.user-desk-recs tbody tr td.table-danger {
  background-color: @slaBreach;
  color: #ffffff;
}

table.user-desk-recs tbody tr:nth-child(odd) > td.table-danger {
  background-color: lighten(@slaBreach, 5%);
}

.minutes {
  text-align: right;
}

th h2 {
  margin-top: 0.5em;
}

.staffing-editor {
  width: 100%;
  height: 200px;
}

.data-quality {
  border: 1px solid #404252;
  padding: 4px 8px 4px 8px;
  font-weight: 400;
  text-align: left;
}

.data-quality > span {
  min-width: 80px;
  display: flex;
  gap: 5px;
  justify-content: space-between;
}

.data-quality__more-info {
  color: #404252;
  font-size: 18px;
}

.tippy-info-icon {
  display: block;
}

.nav-tabs li a {
  display: flex !important;
  gap: 8px;
}

.data-quality__more-info svg, .tippy-info-icon svg {
  display: block;
}

.MuiTooltip-popper {
  font-size: 20px !important;
}

.data-quality__info {
  background-color: #f3f5f9;
  color: #404252;
}

.data-quality__success {
  background-color: #f3f9de;
  color: #2F4500;
}

.data-quality__warning {
  background-color: #fff2e1;
  color: #873200;
}

.data-quality__error {
  background-color: #ffebee;
  color: #99001E;
}

@pax-bar-height: 20px;

@reliability-low: #ff9999;
@reliability-medium: #efc626;
@reliability-quite-high: #cbef7c;
@reliability-high: rgba(13, 182, 36, 0.7);

.pax-bar {
  height: @pax-bar-height;
}

.pax-capacity {
  height: 0px;
  border-bottom: solid 1px #9c9c9c;
}

.pax {
  position: absolute;
  top: 0;
  left: 0;
}

/* summary-boxes */
.summary-boxes {
  height: 90px;
}

.summary-box-container {
  display: inline-block;
  height: 150px;
  background-color: #dddddd;
  padding: 5px 5px 5px 5px;
  margin: 5px 5px 5px 5px;
  min-width: 145px;
}

.summary-box-container h3 {
  margin-top: 0px;
  min-width: 200px;
}

.summary-box-container table {
  width: 100%;
}

.summary-box-container.rag-summary {
  text-align: center;
  padding: 18px;
}

.summary-box-container.rag-summary table.rag-desks {
  width: 100%;
  margin-top: 10px;
}

.summary-box-container.rag-summary td, .summary-box-container.rag-summary th {
  padding: 1%;
  font-size: 16px;
  text-align: right;
}

.summary-box-container.rag-summary table.rag-desks td, .summary-box-container.rag-summary table.rag-desks th {
  width: 60px;
  text-align: center;
}

.summary-box-container.pcp-summary {
  position: relative;
}

.summary-box-container .pcp-pressure {
  text-align: center;
  padding-top: 13px;

}

.summary-box-container .pcp-pressure .title {
  text-align: center;
  font-size: 14pt;
  margin-bottom: 13px;
}

.dashboard-summary__splits {
  width: 100%;
  display: inline-block;
  bottom: 24px;
}

.col-sm-1.pax-count.summary-box-container div {
  position: absolute;
  width: 100%;
  top: 50%;
  transform: translateY(-50%);
  font-size: 27px;
  font-weight: bold;
  text-align: center;
}

.dashboard-summary__pax-summary-cell {
  padding: 3px;
  overflow: hidden;
  white-space: nowrap;
  width: 10%;
}

.pax-summary-cell--left {
  text-align: left;
}

.pax-summary-cell--right {
  text-align: right;
}

.dashboard-summary__pax-summary {
  min-width: 30%;
}

.dashboard-summary__pax-summary-table {
  height: 100%;
}

.dashboard-summary__pax-summary-row:nth-child(odd) {
  background-color: darken(#ddd, 10%);
}

.summary-box-container.rag-summary.red {
  background: #a81b1e;
  color: #fff;
}

.summary-box-container.rag-summary.red th {
  background: #660000;
}

.summary-box-container.rag-summary.red td {
  background: #8f1719;
}

.summary-box-container.rag-summary.amber {
  background: #f47738;
  color: #0b0c0c;
}

.summary-box-container.rag-summary {
  background: #77ab59;
  color: #fff;
}

.summary-box-container.rag-summary th {
  background: #234d20;
}

.summary-box-container.rag-summary td {
  background: #36802d;
}

.summary-box-container.rag-summary.amber {
  background: #f47738;
  color: #0b0c0c;
}

.summary-box-container.rag-summary.amber th {
  background: #ce492a;
}

.summary-box-container.rag-summary.amber td {
  background: #fc8c34;
}

.dashboard-summary .flights-total {
  width: 100%;
  font-size: 18pt;
  text-align: center;
}

.summary-box-count {
  font-size: 20pt;
  font-weight: bold;
  display: inline-block;
}

.splitsource-terminalaverage {
  border-right: solid 5px @reliability-low;
  border-bottom: solid 4px @reliability-low;
  margin-bottom: @tdpadding;
}

.splitsource-historical {
  border-right: solid 5px @reliability-medium;
  border-bottom: solid 4px @reliability-medium;
  margin-bottom: @tdpadding;
}

.splitsource-apisplitswithhistoricalegatepercentage {
  border-right: solid 5px @reliability-high;
  border-bottom: solid 4px @reliability-high;
  margin-bottom: @tdpadding;
}

.dashboard-summary__splits-tooltip {
  display: none;
}
/* ... */

